day 22-08 update pushed

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,6 +12,7 @@
         <div class="d-flex">
           <h4 class="mb-4">Profile</h4>
           <p class="mx-3"><a class="link-opacity-100" href="/feed">Feed</a></p>
+          <p class="mx-3"><a class="link-opacity-100" href="/logout">Logout</a></p>
         </div>
         <div class="flex">
           <div class="image">
