--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -15,7 +15,7 @@
         <% allposts.forEach(function(post){ %>
             <div class="card" style="width: 45rem;">
                 <div class="card-body">
-                  <h5 class="card-title">@<%= post.username %></h5>
+                  <h5 class="card-title">@<%= post.userid %></h5>
                   <p class="card-text"><%= post.data %></p>
                   <p style="font-weight: 600;" class="text-primary"><%= post.likes %> Likes</p>
                   <a href="/like/<%= post._id %>" class="btn btn-primary">Like</a>
