--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,28 +1,17 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="../stylesheets/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="container py-3">
-        <h4 class="mb-4">Feed</h4>
-        <p style="margin-top: -22px;">all posts from all around the indrapuri.</p>
-        <hr>
-        <% allposts.forEach(function(post){ %>
-            <div class="card" style="width: 45rem;">
-                <div class="card-body">
-                  <h5 class="card-title">@<%= post.userid.username %></h5>
-                  <p class="card-text"><%= post.data %></p>
-                  <p style="font-weight: 600;" class="text-primary"><%= post.likes.length %> Likes</p>
-                  <a href="/like/<%= post._id %>" class="btn btn-primary">Like</a>
-                </div>
-            </div>    
-        <% }) %>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
-</html>
+<% include ./partials/header.ejs %>
+<div class="container py-3">
+    <h4 class="mb-4">Feed</h4>
+    <p style="margin-top: -22px;">all posts from all around the indrapuri.</p>
+    <hr>
+    <% allposts.reverse().forEach(function(post){ %>
+        <div class="card mt-2" style="width: 45rem;">
+            <div class="card-body">
+              <h5 class="card-title">@<%= post.userid.username %></h5>
+              <p class="card-text"><%= post.data %></p>
+              <p style="font-weight: 600;" class="text-primary"><%= post.likes.length %> Likes</p>
+              <a href="/like/<%= post._id %>" class="btn btn-primary">Like</a>
+            </div>
+        </div>    
+    <% }) %>
+</div>
+<% include ./partials/footer.ejs %>
