--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,43 +1,50 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="../stylesheets/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-  </head>
-  <body>
-    <div class="container py-3">
-        <div class="d-flex">
-          <h4 class="mb-4">Profile</h4>
-          <p class="mx-3"><a class="link-opacity-100" href="/feed">Feed</a></p>
-          <p class="mx-3"><a class="link-opacity-100" href="/logout">Logout</a></p>
-        </div>
-        <div class="flex">
-          <div class="image">
-              <img src="<%= foundUser.image %>" alt="">
-          </div>
-          <div>
-            <h4 style="text-transform: capitalize;"><%= foundUser.username %></h4>
-            <h6 style="font-weight: 400; margin-top: -5px;">kuchh karta hai</h6>
-          </div>
-        </div>
-        <div class="post mt-4 container-md">
-          <h6>Create a new post.</h6>
-          <div class="row">
-            <div class="col-6">
-              <form action="/post" method="post">
-                <div class="form-floating">
-                  <textarea name="post" class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
-                  <label for="floatingTextarea">What's on your mind ?</label>
-                </div>
-                <button type="submit" class="mt-3 btn btn-primary">Create Post</button>
-              </form>
-            </div>
-          </div>
-        </div>
+<% include ./partials/header.ejs %>
+  <div class="container py-3">
+    <div class="d-flex">
+      <h4 class="mb-4">Profile</h4>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  </body>
-</html>
+    <div class="flex">
+      <div class="image">
+        <img src="<%= foundUser.image %>" alt="">
+      </div>
+      <div>
+        <h4 style="text-transform: capitalize;">
+          <%= foundUser.username %>
+        </h4>
+        <h6 style="font-weight: 400; margin-top: -5px;">kuchh karta hai</h6>
+      </div>
+    </div>
+    <div class="post mt-4 container-md">
+      <h6>Create a new post.</h6>
+      <div class="row">
+        <div class="col-6">
+          <form action="/post" method="post">
+            <div class="form-floating">
+              <textarea name="post" class="form-control" placeholder="Leave a comment here"
+                id="floatingTextarea"></textarea>
+              <label for="floatingTextarea">What's on your mind ?</label>
+            </div>
+            <button type="submit" class="mt-3 btn btn-primary">Create Post</button>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="container mt-4">
+      <h6 class="mb-3">All Posts By You.</h6>
+      <% foundUser.posts.reverse().forEach(function(post){ %>
+        <div class="card mt-3" style="width: 45rem;">
+          <div class="card-body">
+            <h5 class="card-title">@<%= foundUser.username %>
+            </h5>
+            <p class="card-text">
+              <%= post.data %>
+            </p>
+            <p style="font-weight: 600;" class="text-primary">0 Likes</p>
+            <a href="/like/" class="btn btn-primary">Like</a>
+          </div>
+        </div>
+        <% }) %>
+    </div>
+  </div>
+  </div>
+  <% include ./partials/footer.ejs %>
