--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -8,8 +8,8 @@
             <div class="card-body">
               <h5 class="card-title">@<%= post.userid.username %></h5>
               <p class="card-text"><%= post.data %></p>
-              <p style="font-weight: 600;" class="text-primary"><%= post.likes.length %> Likes</p>
-              <a href="/like/<%= post._id %>" class="btn btn-primary">Like</a>
+              <p style="font-weight: 600;" class="text-primary"><%= post.likes.length %> likes</p>
+              <a href="/like/<%= post._id %>" class="btn <%= post.likes.indexOf(user.id) === -1 ? 'btn-primary' : 'btn-danger' %>"><%= post.likes.indexOf(user.id) === -1 ? "Like" : "Unlike" %></a>
             </div>
         </div>    
     <% }) %>
