--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,11 +1,17 @@
 <% include ./partials/header.ejs %>
+  <form id="uploadpic" action="/upload">
+    <input id="fileinp" type="file" name="image">
+  </form>
   <div class="container py-3">
     <div class="d-flex">
       <h4 class="mb-4">Profile</h4>
     </div>
     <div class="flex">
-      <div class="image">
-        <img src="<%= foundUser.image %>" alt="">
+      <div class="parentcircle">
+        <div class="pencil"><i class="ri-pencil-line"></i></div>
+        <div class="image">
+          <img src="../images/uploads/<%= foundUser.image %>" alt="">
+        </div>
       </div>
       <div>
         <h4 style="text-transform: capitalize;">
@@ -47,4 +53,16 @@
     </div>
   </div>
   </div>
+
+  <script>
+    document.querySelector(".pencil")
+    .addEventListener("click", function(){
+      document.querySelector("#fileinp").click();
+    })
+
+    document.querySelector("#fileinp")
+    .addEventListener("change", function(){
+      document.querySelector("#uploadpic").submit();
+    })
+  </script>
   <% include ./partials/footer.ejs %>
