--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,6 +18,7 @@
           <%= foundUser.username %>
         </h4>
         <h6 style="font-weight: 400; margin-top: -5px;">kuchh karta hai</h6>
+        <a href="/edit">edit profile</a>
       </div>
     </div>
     <div class="post mt-4 container-md">
@@ -45,8 +46,13 @@
             <p class="card-text">
               <%= post.data %>
             </p>
-            <p style="font-weight: 600;" class="text-primary"><%= post.likes.length %> Likes</p>
-            <a href="/like/<%= post._id %>" class="btn <%= post.likes.indexOf(foundUser.id) === -1 ? 'btn-primary' : 'btn-danger' %>"><%= post.likes.indexOf(foundUser.id) === -1 ? "Like" : "Unlike" %></a>
+            <p style="font-weight: 600;" class="text-primary">
+              <%= post.likes.length %> Likes
+            </p>
+            <a href="/like/<%= post._id %>"
+              class="btn <%= post.likes.indexOf(foundUser.id) === -1 ? 'btn-primary' : 'btn-danger' %>">
+              <%= post.likes.indexOf(foundUser.id)===-1 ? "Like" : "Unlike" %>
+            </a>
           </div>
         </div>
         <% }) %>
@@ -56,13 +62,13 @@
 
   <script>
     document.querySelector(".pencil")
-    .addEventListener("click", function(){
-      document.querySelector("#fileinp").click();
-    })
+      .addEventListener("click", function () {
+        document.querySelector("#fileinp").click();
+      })
 
     document.querySelector("#fileinp")
-    .addEventListener("change", function(){
-      document.querySelector("#uploadpic").submit();
-    })
+      .addEventListener("change", function () {
+        document.querySelector("#uploadpic").submit();
+      })
   </script>
   <% include ./partials/footer.ejs %>
